sample-repo/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: order-service
  namespace: org-ecommerce-prod
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 8080
    protocol: TCP
    name: http
  selector:
    app: order-service
